--- a/src/html/cms/index.html
+++ b/src/html/cms/index.html
@@ -5,14 +5,11 @@
     @@include("./layout/header.html")
 
     <main role="main" class="main-content">
-      @@include('./layout/pageHead.html')
-
+      @@include('./layout/pageHead.html',{ "upper-nav" : "الرئيسية", "main-page-title" : "خدمة التخصيص والترخيص" })
       <div class="container">
         <div class="d-flex mb-5 mt-5">
           <div class="flex-fill ps-2 request-list_card">
-            <div
-              class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between"
-            >
+            <div class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between">
               <div>
                 <h2 class="mb-4">3</h2>
                 <p class="m-0 lh-1">مسودات</p>
@@ -24,9 +21,7 @@
           </div>
 
           <div class="flex-fill px-2 request-list_card">
-            <div
-              class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between"
-            >
+            <div class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between">
               <div>
                 <h2 class="mb-4">5</h2>
                 <p class="m-0 lh-1">طلب تمديد</p>
@@ -38,9 +33,7 @@
           </div>
 
           <div class="flex-fill px-2 request-list_card">
-            <div
-              class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between"
-            >
+            <div class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between">
               <div>
                 <h2 class="mb-4">5</h2>
                 <p class="m-0 lh-1">طلب الغاء</p>
@@ -52,9 +45,7 @@
           </div>
 
           <div class="flex-fill px-2 request-list_card">
-            <div
-              class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between"
-            >
+            <div class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between">
               <div>
                 <h2 class="mb-4">5</h2>
                 <p class="m-0 lh-1">طلب تعديل كميات</p>
@@ -66,9 +57,7 @@
           </div>
 
           <div class="flex-fill pe-2 request-list_card">
-            <div
-              class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between"
-            >
+            <div class="card border-0 shadow-sm px-3 py-4 d-flex flex-row justify-content-between">
               <div>
                 <h2 class="mb-4">5</h2>
                 <p class="m-0 lh-1">طلب تجديد</p>
@@ -94,20 +83,14 @@
                     </div>
                     <div class="lh-lg">
                       <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                      <p class="m-0 text-black-50 opacity-5">
-                        34435# | خدمة التخصيص و الترخيص
-                      </p>
+                      <p class="m-0 text-black-50 opacity-5">34435# | خدمة التخصيص و الترخيص</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="text-start">
-                    <span class="badge rounded-pill badge-success"
-                      >وثيقة تخصيص</span
-                    >
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="badge rounded-pill badge-success">وثيقة تخصيص</span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -122,20 +105,14 @@
                     </div>
                     <div class="lh-lg">
                       <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                      <p class="m-0 text-black-50 opacity-5">
-                        34435# | خدمة التخصيص و الترخيص
-                      </p>
+                      <p class="m-0 text-black-50 opacity-5">34435# | خدمة التخصيص و الترخيص</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="text-start">
-                    <span class="badge rounded-pill badge-recommand"
-                      >طلب توصية</span
-                    >
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="badge rounded-pill badge-recommand">طلب توصية</span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -150,18 +127,14 @@
                     </div>
                     <div class="lh-lg">
                       <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                      <p class="m-0 text-black-50 opacity-5">
-                        34435# | خدمة التخصيص و الترخيص
-                      </p>
+                      <p class="m-0 text-black-50 opacity-5">34435# | خدمة التخصيص و الترخيص</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="text-start">
                     <span class="badge rounded-pill badge-new">طلب توصية</span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -176,18 +149,14 @@
                     </div>
                     <div class="lh-lg">
                       <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                      <p class="m-0 text-black-50 opacity-5">
-                        34435# | خدمة التخصيص و الترخيص
-                      </p>
+                      <p class="m-0 text-black-50 opacity-5">34435# | خدمة التخصيص و الترخيص</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="text-start">
                     <span class="badge rounded-pill badge-draft">مسودة</span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -202,20 +171,14 @@
                     </div>
                     <div class="lh-lg">
                       <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                      <p class="m-0 text-black-50 opacity-5">
-                        34435# | خدمة التخصيص و الترخيص
-                      </p>
+                      <p class="m-0 text-black-50 opacity-5">34435# | خدمة التخصيص و الترخيص</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="text-start">
-                    <span class="badge rounded-pill badge-light-gray"
-                      >للتحديث</span
-                    >
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <span class="badge rounded-pill badge-light-gray">للتحديث</span>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
@@ -230,18 +193,14 @@
                     </div>
                     <div class="lh-lg">
                       <div><strong>طلب تخصيص جديد</strong>, مصنع ساسكو</div>
-                      <p class="m-0 text-black-50 opacity-5">
-                        34435# | خدمة التخصيص و الترخيص
-                      </p>
+                      <p class="m-0 text-black-50 opacity-5">34435# | خدمة التخصيص و الترخيص</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-12 col-md-6">
                   <div class="text-start">
                     <span class="badge rounded-pill badge-danger">ملغى</span>
-                    <p class="m-0 text-black-50 text-opacity-25 lh-1">
-                      12.10.2022
-                    </p>
+                    <p class="m-0 text-black-50 text-opacity-25 lh-1">12.10.2022</p>
                   </div>
                 </div>
               </div>
