--- a/src/html/cms/request-infringement-sorting-officer.html
+++ b/src/html/cms/request-infringement-sorting-officer.html
@@ -228,7 +228,7 @@
       <div class="page-footer bg-white shadow-sm">
         <div class="container">
           <div class="d-flex py-4 flex-row-reverse">
-            <button class="btn btn-primary me-3 px-3">تقديم افادة</button>
+            <button class="btn btn-primary me-3 px-3">اسناد إلي المعتمد</button>
           </div>
         </div>
       </div>
