--- a/src/html/cms/request-infringement.html
+++ b/src/html/cms/request-infringement.html
@@ -177,6 +177,7 @@
           <div class="card-blue-gray rounded d-flex justify-content-between m-3 p-3 bg-placeholder-gray">
             <div class="d-flex align-items-center">
               <div class="lh-lg card-title mb-0">ملف الرفع المساحي</div>
+              <span class="text-danger">*</span>
             </div>
             <div class="d-flex justify-content-between align-items-center">
               <h5 class="collapse-icon d-block px-1 m-0">file.png</h5>
